<resources>

    <string name="app_name">Midterm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="description">Description</string>
    <string name="cart">Cart</string>
    <string name="return_to_home_page">Return to home page</string>
    <string name="order_successfully">Order Successfully</string>
    <string name="place_order">Place Order</string>
    <string name="qty">Qty:</string>
    <string name="ImageOfProduct">productImage</string>
    <string name="Button">Button</string>

    <string-array name="amount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
</resources>