<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="homeViewModel"
            type="com.example.midterm.viewmodels.HomeViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="320sp"
            android:layout_height="320sp"
            android:layout_gravity="center"
            android:contentDescription="@string/ImageOfProduct"
            android:productImage="@{homeViewModel.product.imageURL}"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{homeViewModel.product.name}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`Price: ` + String.valueOf(homeViewModel.product.price)}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/availableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{homeViewModel.product.available ? `Available` : `Not Available`}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{homeViewModel.product.description}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{homeViewModel.product.available}"
            android:onClick="@{() -> homeViewModel.addProductToCart(homeViewModel.product)}"
            android:text="@string/add_to_cart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</layout>