<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cartProduct"
            type="com.example.midterm.models.CartProduct" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="120sp"
            android:layout_height="120sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:productImage="@{cartProduct.product.imageURL}"
            android:contentDescription="@string/ImageOfProduct" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/productImageView"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:text="@{cartProduct.product.name}" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/productNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/productNameTextView" />

        <Spinner
            android:id="@+id/quantitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:entries="@array/amount"
            android:minHeight="60sp"
            android:setVal="@{cartProduct.quantity}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ImageButton
            android:id="@+id/deleteProductButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/Button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="9sp"
            app:layout_constraintBottom_toBottomOf="@+id/quantitySpinner"
            app:layout_constraintStart_toEndOf="@+id/quantitySpinner"
            app:layout_constraintTop_toTopOf="@+id/quantitySpinner"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/productTotalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@{String.valueOf(cartProduct.product.price *  cartProduct.quantity)}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
